# GUI_search_algorithm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  study.txt
algorithms/: __init__.py  bfs.py  dfs.py
examples/: sample_graph.json
gui/: __init__.py  data_structure_widget.py  graph_canvas.py  main_window.py
scripts/: auto_install_python.bat  install_python_first.bat  quick_setup.bat  setup_unix.sh  setup_windows.bat
src/: calculator.py
utils/: __init__.py  font_utils.py  graph_utils.py
